cookie bug fixed

--- a/public/login.html
+++ b/public/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <div class="login-header">Login</div>
-            <form class="login-form" method="POST" action="/api/login">
+            <form class="login-form" method="POST" action="/api/login" autocomplete="off">
                 <input type="email" name="email" placeholder="Email" required />
                 <input type="password" name="password" placeholder="Password" required />
                 <button type="submit">Sign In</button>
