--- a/public/register.html
+++ b/public/register.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <div class="login-header">Register</div>
-            <form class="login-form" method="POST" action="/api/add-user">
+            <form class="login-form" method="POST" action="/api/add-user" autocomplete="off">
                 <input type="text" name="username" placeholder="Username" required />
                 <input type="email" name="email" placeholder="Email" required />
                 <input type="password" name="password" placeholder="Password" required />
